--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
       <div class="row">
         <div class="col-md-12">
           <h1 class="bg-faded display-1 text-primary text-center">Title</h1>
+          <p class="lead">Lead paragraph </p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-6"></div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12"><a href="#" class="btn btn-primary">Button</a></div>
+        <div class="col-md-6">
+          <p class="">Paragraph</p><a href="#" class="btn btn-primary">Button</a></div>
+        <div class="col-md-6">
+          <p class="">Paragraph</p>
+        </div>
       </div>
     </div>
   </div>
